2.4.0
May 7, 2019

NEW: option to keep/ignore a linebreak at the end of a file (table editor)
NEW: improved change detection of table editor to avoid overwriting original text representation without editing any values

2.3.1
Mar 31, 2019

NEW: use default color scheme & font for table editor as well
FIX: ConcurrentModificationException tackled (table editor)

2.3.0
Mar 04, 2019

NEW: Zoom table-editor cells with Ctrl+Mouse Wheel (contribution by @royqh1979)
FIX: Scratches are now recognised as CSV
FIX: Several issues resolved by reworking column/row editing

2.2.1
Jan 26, 2019

FIX: ArrayIndexOutOfBoundsException when opening a CSV file with an unexpected separator (table editor)
FIX: ConcurrentModificationException during event handling (table editor)

2.2.0
Jan 13, 2019

NEW: option to fixate first row as header (table editor)
NEW: row numbers (table editor)
FIX: exception when clicking to right of populated columns (table editor)
FIX: keep leading/trailing whitespaces (table editor)

2.1.0
Jan 01, 2019

NEW: support column highlighting for table editor
NEW: support all kind of text attributes for column highlighting
NEW: table editor values not longer enforced to be quoted on save (customizable)
FIX: prevent backspace/delete erasing cell value while editing (table editor)

2.0.2
Dec 16, 2018

FIX: top and bottom panel scrollable & add column/row buttons removed

2.0.1
Dec 02, 2018

FIX: disabling table editor for large files
FIX: applying row height for newly opened files

2.0.0
Nov 20, 2018

NEW: CSV/TSV table editor!!!

1.9.1
Oct 12, 2018

FIX: reading/writing CSV editor states
FIX: tooltip for tab separator if disabled

1.9.0
Oct 01, 2018

NEW: CSV/TSV editor settings (File > Settings > General > CSV/TSV Editor)
NEW: TAB (separator) highlighting
NEW: Enable/disable balloon info
NEW: Soft wrap settings specific for CSV/TSV

1.8.2
Sep 20, 2018

NEW: Customizable column coloring (File > Settings > Editor > Color Scheme > CSV)

1.8.1
Aug 16, 2018
