@@ -48,6 +48,7 @@
         <pre style="font-family: sans-serif">
 NEW: option to keep/ignore a linebreak at the end of a file (table editor)
 NEW: improved change detection of table editor to avoid overwriting original text representation without editing any values
+NEW: file based value separator (e.g. ',' or ';')
       </pre>
     ]]>
     </change-notes>
