@@ -3,6 +3,7 @@ May 7, 2019
 
 NEW: option to keep/ignore a linebreak at the end of a file (table editor)
 NEW: improved change detection of table editor to avoid overwriting original text representation without editing any values
+NEW: file based value separator (e.g. ',' or ';')
 
 2.3.1
 Mar 31, 2019
